--- a/www/index.html
+++ b/www/index.html
@@ -181,9 +181,9 @@
 				</ul>
 				<h3 class="subtitle">The most popular</h3>
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>Ut wisi enim ad minim veniam</li>
+					<li>Num liber tempor cam</li>
+					<li>Ut wisi enim ad minim veniam</li>
 				</ul>
 			</div>
 			<div class="sidebar">
