test commit - inserting page

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 				</div>
 				<nav>
 					<ul class="main_menu">
-						<li><a href="#">Ads</a></li>
+						<li><a href="inserting-ad.html">Ads</a></li>
 						<li><a href="#">Finance</a></li>
 						<li><a href="#">Moving</a></li>
 						<li><a href="#">Sell</a></li>
