create footer, change sprite, styled footer

--- a/www/index.html
+++ b/www/index.html
@@ -283,7 +283,17 @@
 		<div class="push"></div>
 	</div>
 	<footer>
-		
+		<div class="bg_footer"></div>
+		<div class="search_copyright_box">
+			<div class="search">
+				<input type="text" name="search">
+				<button type="submit" name="search">Search</button>
+			</div>
+			<div class="copyright">
+				<span>&#169 2009-2013</span>
+				<a href="#">Site map</a>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
