--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="bg_header"></div>
 			<div class="logo">
-				<a href="#"><img src="images/logo.jpg" alt=""></a>
+				<a href="/"><img src="images/logo.jpg" alt=""></a>
 			</div>
 			<div class="reg_menu_block">
 				<div class="reg_block">
@@ -290,7 +290,7 @@
 				<button type="submit" name="search">Search</button>
 			</div>
 			<div class="copyright">
-				<span>&#169 2009-2013</span>
+				<span>&copy; 2009-2013</span>
 				<a href="#">Site map</a>
 			</div>
 		</div>
