--- a/www/inserting-ad.html
+++ b/www/inserting-ad.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="bg_header"></div>
 			<div class="logo">
-				<a href="#"><img src="images/logo.jpg" alt=""></a>
+				<a href="/"><img src="images/logo.jpg" alt=""></a>
 			</div>
 			<div class="reg_menu_block">
 				<div class="reg_block">
@@ -47,6 +47,57 @@
 				<h3 class="page_subtitle">Inserting ad</h3>
 				<div class="content_holder">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, numquam, quam, alias impedit excepturi repellendus quibusdam placeat laudantium officia ab delectus aut tempore voluptas fugiat facilis deleniti exercitationem perferendis est maxime laborum et culpa nisi sit error aliquam dicta quaerat obcaecati quae aperiam hic accusamus pariatur quisquam nesciunt vero atque repellat expedita nihil similique dolorem.</p>
+					<form id="decription_property" action="#">
+						<h4>Decription of the property</h4>
+						<div class="col1">
+							<div class="spacer">
+								<h5>Type of property</h5>
+								<select name="" id="">
+									<option value="">Lorem.</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+								<select name="" id="">
+									<option value="">Lorem.</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+								<select name="" id="">
+									<option value="">Lorem.</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+								<h5>Surface:</h5>
+								<p><input type="text"/>m<sup>2</sup></p>
+							</div>
+						</div>
+						<div class="col2">
+							<div class="spacer">
+								<h5>Location</h5>
+								<select name="" id="">
+									<option value="">Lorem.</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+								<select name="" id="">
+									<option value="">Lorem.</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+								<textarea name="" id="" cols="30" rows="10"></textarea>
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
 			<div class="sidebar">
@@ -128,6 +179,17 @@
 		<div class="push"></div>
 	</div>
 	<footer>
+		<div class="bg_footer"></div>
+		<div class="search_copyright_box">
+			<div class="search">
+				<input type="text" name="search">
+				<button type="submit" name="search">Search</button>
+			</div>
+			<div class="copyright">
+				<span>&copy; 2009-2013</span>
+				<a href="#">Site map</a>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
