--- a/www/index.html
+++ b/www/index.html
@@ -286,13 +286,18 @@
 		<div class="bg_footer"></div>
 		<div class="search_copyright_box">
 			<div class="search">
-				<input type="text" name="search">
+				<input type="text" name="search" placeholder="search this site">
 				<button type="submit" name="search">Search</button>
 			</div>
 			<div class="copyright">
 				<span>&#169 2009-2013</span>
 				<a href="#">Site map</a>
 			</div>
+		</div>
+		<div class="footer_menu">
+			<ul>
+				<li><a href="#"></a></li>
+			</ul>
 		</div>
 	</footer>
 </body>
