styled footer, change sprite

--- a/www/index.html
+++ b/www/index.html
@@ -109,7 +109,7 @@
 								<option value="city_name">City name</option>
 							</select>
 							<h5 class="title_budget">Budget</h5>
-							<input type="text" placeholder="min"> - <input type="text" placeholder="max"> &#8364;
+							<p><input type="text" placeholder="min"> - <input type="text" placeholder="max"> &#8364;</p>
 							<h5 class="title_number">Number of room:</h5>
 							<ul class="paginator_room">
 								<li><a href="#" class="active">1</a></li>
@@ -286,8 +286,10 @@
 		<div class="bg_footer"></div>
 		<div class="search_copyright_box">
 			<div class="search">
-				<input type="text" name="search" placeholder="search this site">
-				<button type="submit" name="search">Search</button>
+				<form action="#">
+					<input type="text" name="search" placeholder="search this site">
+					<button type="submit" name="search">Search</button>
+				</form>
 			</div>
 			<div class="copyright">
 				<span>&copy; 2009-2013</span>
@@ -296,8 +298,16 @@
 		</div>
 		<div class="footer_menu">
 			<ul>
-				<li><a href="#"></a></li>
+				<li><a href="#">Menu 1</a></li>
+				<li><a href="#">Menu 2</a></li>
+				<li><a href="#">Menu 3</a></li>
+				<li><a href="#">Menu 4</a></li>
+				<li><a href="#">Menu 5</a></li>
 			</ul>
+		</div>
+		<div class="newsletter_block">
+			<p>Subscribe to our newsletter</p>
+			<a href="#">Subscribe</a>
 		</div>
 	</footer>
 </body>
