--- a/www/inserting-ad.html
+++ b/www/inserting-ad.html
@@ -182,13 +182,28 @@
 		<div class="bg_footer"></div>
 		<div class="search_copyright_box">
 			<div class="search">
-				<input type="text" name="search">
-				<button type="submit" name="search">Search</button>
+				<form action="#">
+					<input type="text" name="search" placeholder="search this site">
+					<button type="submit" name="search">Search</button>
+				</form>
 			</div>
 			<div class="copyright">
 				<span>&copy; 2009-2013</span>
 				<a href="#">Site map</a>
 			</div>
+		</div>
+		<div class="footer_menu">
+			<ul>
+				<li><a href="#">Menu 1</a></li>
+				<li><a href="#">Menu 2</a></li>
+				<li><a href="#">Menu 3</a></li>
+				<li><a href="#">Menu 4</a></li>
+				<li><a href="#">Menu 5</a></li>
+			</ul>
+		</div>
+		<div class="newsletter_block">
+			<p>Subscribe to our newsletter</p>
+			<a href="#">Subscribe</a>
 		</div>
 	</footer>
 </body>
