inserting page final v1.3

--- a/www/inserting-ad.html
+++ b/www/inserting-ad.html
@@ -230,6 +230,79 @@
 								<li><img src="images/img_apartment.jpg" alt="" /></li>
 							</ul>
 						</div>
+						<div class="col_full video">
+							<h5>Video</h5>
+							<h6>Please enter your video code here:</h6>
+							<div class="col1">
+								<label for="#video1">
+									Video 01
+									<input id="video1" type="text">
+								</label>
+							</div>
+							<div class="col2">
+								<label for="#video2">
+									Video 02
+									<input id="video2" type="text">
+								</label>
+							</div>
+							<button type="submit">Add more video</button>
+						</div>
+						<div class="col_full description">
+							<h5>Description:</h5>
+							<textarea name="" id="" cols="30" rows="10"></textarea>
+						</div>
+						<div class="col_full renting_price">
+							<h5>Renting price:</h5>
+							<p>
+								<input type="text" placeholder="Enter your price">
+								<span>&euro;</span>
+								<select name="" id="">
+									<option value="">1/month</option>
+									<option value="">Ipsum.</option>
+									<option value="">Porro.</option>
+									<option value="">Odit.</option>
+									<option value="">Corrupti.</option>
+								</select>
+							</p>
+						</div>
+						<div class="col_full personal_info">
+							<h4>Personal Information</h4>
+							<div class="col1">
+								<div class="block two_labels">
+									<label><input type="radio" checked name="agency" value="agency">Agency</label>
+									<label><input type="radio" name="agency" value="individual">Individual</label>
+								</div>
+								<div class="block">
+									<label for="">Name</label>
+									<input type="text" placeholder="Enter your name">
+								</div>
+								<div class="block">
+									<label for="">Surname</label>
+									<input type="text" placeholder="Enter your surname">
+								</div>
+							</div>
+							<div class="col2">
+								<div class="block">
+									<label for="">Web site</label>
+									<input type="text" placeholder="Enter your http">
+								</div>
+								<div class="block">
+									<label for="">E-mail</label>
+									<input type="text" placeholder="Enter your E-mail">
+								</div>
+								<div class="block">
+									<label for="">Phone number</label>
+									<input type="text" placeholder="Enter your phone">
+									<p><a href="#">add phone number</a></p>
+								</div>
+								<div class="block conditions">
+									<label><input type="checkbox" name="conditions" value="american">I accept conditions posting ads</label>
+								</div>
+								<div class="block">
+									<button>Place an ad</button>
+								</div>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
