Search result page(sort tab)

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -125,6 +125,16 @@
 						</form>
 					</div>
 				</div>
+				<div class="list_search_result">
+					<div class="filter_sort">
+						<ul>
+							<li class="sort_list">List</li>
+							<li class="sort_photo">Photos</li>
+							<li class="sort_individual">Individuals</li>
+							<li class="sort_professional">Professionals</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			<div class="sidebar">
 				<aside>
