create/styled sort tab, sorter, paginator (Search result page)

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -128,10 +128,30 @@
 				<div class="list_search_result">
 					<div class="filter_sort">
 						<ul>
-							<li class="sort_list">List</li>
+							<li class="sort_list active">List</li>
 							<li class="sort_photo">Photos</li>
 							<li class="sort_individual">Individuals</li>
 							<li class="sort_professional">Professionals</li>
+						</ul>
+					</div>
+					<div class="sorter_paginator">
+						<div class="sorter">
+							<h5>Sort by</h5>
+							<select name="" id="">
+								<option value="">Sort 1</option>
+								<option value="">Ipsum.</option>
+								<option value="">Porro.</option>
+								<option value="">Odit.</option>
+								<option value="">Corrupti.</option>
+							</select>
+						</div>
+						<div class="paginator">
+							<p>Page 1 of 30 <a href="#" class="next_page"></a></p>
+						</div>
+					</div>
+					<div class="list_result">
+						<ul>
+							<li></li>
 						</ul>
 					</div>
 				</div>
