--- a/www/index.html
+++ b/www/index.html
@@ -142,7 +142,7 @@
 							<label><input type="radio" name="budget" value="filter1">Filter1</label>
 							<label><input type="radio" name="budget" value="filter1">Filter1</label>
 							<label><input type="radio" name="budget" value="filter1">Filter1</label>
-							<button type="submit" name="search" class="filter_button"><span>Search</span><i></i></button>
+							<button type="submit" name="search" class="search_button"><span>Search</span><i></i></button>
 						</div>
 					</form>
 				</div>
