--- a/www/inserting-ad-2.html
+++ b/www/inserting-ad-2.html
@@ -176,48 +176,59 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col1 line_selects">
-							<div class="heating block">
+						<div class="col_full">
+							<div class="block radio_btns">
 								<h5>Heating:</h5>
-								<select name="" id="">
-									<option value="">Wood</option>
-									<option value="">Ipsum.</option>
-									<option value="">Porro.</option>
-									<option value="">Odit.</option>
-									<option value="">Corrupti.</option>
-								</select>
+								<label><input type="checkbox" checked name="heating" value="wood">Wood</label>
+								<label><input type="checkbox" name="heating" value="fuel">Fuel</label>
+								<label><input type="checkbox" name="heating" value="electric">Electric</label>
+								<label><input type="checkbox" name="heating" value="geotermal">Geotermal</label>	
+								<label><input type="checkbox" name="heating" value="gas">Gas</label>
+								<label><input type="checkbox" name="heating" value="sol">Sol</label>
+								<label><input type="checkbox" name="heating" value="solar">Solar</label>
+								<label><input type="checkbox" name="heating" value="resersible">Resersible</label>
 							</div>
-							<div class="heating block">
-								<h5>Exterior feuters:</h5>
-								<select name="" id="">
-									<option value="">Garage</option>
-									<option value="">Ipsum.</option>
-									<option value="">Porro.</option>
-									<option value="">Odit.</option>
-									<option value="">Corrupti.</option>
-								</select>
-							</div>
-						</div>
-						<div class="col2 line_selects">
-							<div class="heating block">
+							<div class="block radio_btns">
 								<h5>Interior feuters:</h5>
-								<select name="" id="">
-									<option value="">Alarm</option>
-									<option value="">Ipsum.</option>
-									<option value="">Porro.</option>
-									<option value="">Odit.</option>
-									<option value="">Corrupti.</option>
-								</select>
+								<label><input type="checkbox" checked name="interior" value="alarm">Alarm</label>
+								<label><input type="checkbox" name="interior" value="insert">Insert</label>
+								<label><input type="checkbox" name="interior" value="beams">Beams</label>
+								<label><input type="checkbox" name="interior" value="veranda">Veranda</label>	
+								<label><input type="checkbox" name="interior" value="acoustic_insulation">Acoustic insulation</label>
+								<label><input type="checkbox" name="interior" value="double_glazing">Double Glazing</label>
+								<label><input type="checkbox" name="interior" value="air_conditioning">Air conditioning</label>
+								<label><input type="checkbox" name="interior" value="solar_water_heater">Solar water heater</label>
+								<label><input type="checkbox" name="interior" value="cave">Cave</label>
+								<label><input type="checkbox" name="interior" value="fireplace">Fireplace</label>
 							</div>
-							<div class="heating block">
+							<div class="block radio_btns">
+								<h5>Exterior feuters:</h5>
+								<label><input type="checkbox" checked name="exterior" value="garage">Garage</label>
+								<label><input type="checkbox" name="exterior" value="box_cover">Box cover</label>
+								<label><input type="checkbox" name="exterior" value="closed_box">Closed box</label>
+								<label><input type="checkbox" name="exterior" value="parking">Parking</label>	
+								<label><input type="checkbox" name="exterior" value="tennis">Tennis</label>
+								<label><input type="checkbox" name="exterior" value="pool">Pool</label>
+								<label><input type="checkbox" name="exterior" value="view">View</label>
+								<label><input type="checkbox" name="exterior" value="parking_couvert">Parking couvert</label>
+							</div>
+							<div class="block radio_btns">
 								<h5>Near:</h5>
-								<select name="" id="">
-									<option value="">Downtown</option>
-									<option value="">Ipsum.</option>
-									<option value="">Porro.</option>
-									<option value="">Odit.</option>
-									<option value="">Corrupti.</option>
-								</select>
+								<label><input type="checkbox" checked name="near" value="downtown">Downtown</label>
+								<label><input type="checkbox" name="near" value="schools">Schools</label>
+								<label><input type="checkbox" name="near" value="shops">Shops</label>
+								<label><input type="checkbox" name="near" value="station">Station</label>	
+								<label><input type="checkbox" name="near" value="tram">Tram</label>
+								<label><input type="checkbox" name="near" value="green_spaces">Green spaces</label>
+								<label><input type="checkbox" name="near" value="beach_sea">Beach/Sea</label>
+								<label><input type="checkbox" name="near" value="ski">Ski</label>
+								<label><input type="checkbox" name="near" value="airport">Airport</label>
+								<label><input type="checkbox" name="near" value="port">Port</label>
+								<label><input type="checkbox" name="near" value="pool">Pool</label>
+								<label><input type="checkbox" name="near" value="tram">Tram</label>
+								<label><input type="checkbox" name="near" value="bus">Bus</label>
+								<label><input type="checkbox" name="near" value="metro">Metro</label>
+								<label><input type="checkbox" name="near" value="highway">Highway</label>
 							</div>
 						</div>
 						<div class="col_full photo">
