styled list search result

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -149,9 +149,27 @@
 							<p>Page 1 of 30 <a href="#" class="next_page"></a></p>
 						</div>
 					</div>
-					<div class="list_result">
+					<div class="list_apartment">
 						<ul>
-							<li></li>
+							<li>
+								<p class="time_add">54 min ago</p>
+								<div class="img_search_result">
+									<div class="img_holder">
+										<img src="images/img_result.jpg" alt="">
+									</div>
+									<a href="#">4 pfotos</a>
+								</div>
+								<p class="price">&euro; 230 000</p>
+								<p class="address">Name of street</p>
+								<p>Apartment</p>
+								<p>1 price</p>
+								<p>48 m<sup>2</sup></p>
+								<ul class="share_button">
+									<li><img src="images/share_tw.png" alt=""></li>
+									<li><img src="images/share_fb.png" alt=""></li>
+								</ul>
+								<a href="#" class="contact_button">Contact the agency</a>
+							</li>
 						</ul>
 					</div>
 				</div>
