--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/jquery.ui.selectmenu.js"></script>
 </head>
-<body>
+<body class="home_page">
 	<div class="wrapper">
 		<header>
 			<div class="bg_header"></div>
