aside contact agency

--- a/www/search-result.html
+++ b/www/search-result.html
@@ -157,7 +157,7 @@
 									<div class="img_holder">
 										<img src="images/img_result.jpg" alt="">
 									</div>
-									<a href="#">4 pfotos</a>
+									<a href="#">4 photos</a>
 								</div>
 								<p class="price">&euro; 230 000</p>
 								<p class="address">Name of street</p>
@@ -168,13 +168,84 @@
 									<li><img src="images/share_tw.png" alt=""></li>
 									<li><img src="images/share_fb.png" alt=""></li>
 								</ul>
-								<a href="#" class="contact_button">Contact the agency</a>
+								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+							</li>
+							<li>
+								<p class="time_add">54 min ago</p>
+								<div class="img_search_result">
+									<div class="img_holder">
+										<img src="images/img_result.jpg" alt="">
+									</div>
+									<a href="#">4 photos</a>
+								</div>
+								<p class="price">&euro; 230 000</p>
+								<p class="address">Name of street</p>
+								<p>Apartment</p>
+								<p>1 price</p>
+								<p>48 m<sup>2</sup></p>
+								<ul class="share_button">
+									<li><img src="images/share_tw.png" alt=""></li>
+									<li><img src="images/share_fb.png" alt=""></li>
+								</ul>
+								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+							</li>
+							<li>
+								<p class="time_add">54 min ago</p>
+								<div class="img_search_result">
+									<div class="img_holder">
+										<img src="images/img_result.jpg" alt="">
+									</div>
+									<a href="#">4 photos</a>
+								</div>
+								<p class="price">&euro; 230 000</p>
+								<p class="address">Name of street</p>
+								<p>Apartment</p>
+								<p>1 price</p>
+								<p>48 m<sup>2</sup></p>
+								<ul class="share_button">
+									<li><img src="images/share_tw.png" alt=""></li>
+									<li><img src="images/share_fb.png" alt=""></li>
+								</ul>
+								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+							</li>
+							<li>
+								<p class="time_add">54 min ago</p>
+								<div class="img_search_result">
+									<div class="img_holder">
+										<img src="images/img_result.jpg" alt="">
+									</div>
+									<a href="#">4 photos</a>
+								</div>
+								<p class="price">&euro; 230 000</p>
+								<p class="address">Name of street</p>
+								<p>Apartment</p>
+								<p>1 price</p>
+								<p>48 m<sup>2</sup></p>
+								<ul class="share_button">
+									<li><img src="images/share_tw.png" alt=""></li>
+									<li><img src="images/share_fb.png" alt=""></li>
+								</ul>
+								<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="sidebar">
+				<aside class="contact_agency">
+					<h3>Agency that offers this property</h3>
+					<div class="img_partner">
+						<img src="images/img_partner1.jpg" alt="">
+					</div>
+					<p>Immo Liaison</p>
+					<p>75789 Paris 9th</p>
+					<ul class="get_in_touch">
+						<li><a href="#" class="contact_link"><i></i>contact</a></li>
+						<li><a href="#" class="contact_ads"><i></i>all ads</a></li>
+						<li><a href="#" class="contact_website"><i></i>website</a></li>
+					</ul>
+					<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+				</aside>
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">Our partners</h3>
