--- a/www/single.html
+++ b/www/single.html
@@ -58,7 +58,7 @@
 					<div class="price_button">
 						<p class="price">&euro; 230</p>
 						<p class="view_phone">view phone number</p>
-						<button></button>
+						<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 					</div>
 				</div>
 				<div class="content_holder">
