--- a/www/single.html
+++ b/www/single.html
@@ -66,6 +66,20 @@
 				</div>
 			</div>
 			<div class="sidebar">
+				<aside class="contact_agency">
+					<h3>Agency that offers this property</h3>
+					<div class="img_partner">
+						<img src="images/img_partner1.jpg" alt="">
+					</div>
+					<p>Immo Liaison</p>
+					<p>75789 Paris 9th</p>
+					<ul class="get_in_touch">
+						<li><a href="#" class="contact_link"><i></i>contact</a></li>
+						<li><a href="#" class="contact_ads"><i></i>all ads</a></li>
+						<li><a href="#" class="contact_website"><i></i>website</a></li>
+					</ul>
+					<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
+				</aside>
 				<aside>
 					<div class="bg_sidebar"></div>
 					<h3 class="subtitle">Our partners</h3>
