--- a/www/single.html
+++ b/www/single.html
@@ -56,7 +56,7 @@
 						<p>48m<sup>2</sup></p>
 					</div>
 					<div class="price_button">
-						<p class="price">&euro; 230</p>
+						<p class="price">&euro; 230 000</p>
 						<p class="view_phone">view phone number</p>
 						<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 					</div>
