--- a/www/single.html
+++ b/www/single.html
@@ -61,8 +61,12 @@
 						<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 					</div>
 				</div>
-				<div class="content_holder">
-					
+				<div class="content_holder block_single_bottom">
+					<ul class="single_page_tabs">
+						<li class="active"><i class="detail"></i><span>Detail</span></li>
+						<li><i class="photos"></i>Photos</li>
+						<li><i class="map"></i>Map</li>
+					</ul>
 				</div>
 			</div>
 			<div class="sidebar">
