--- a/www/single.html
+++ b/www/single.html
@@ -67,6 +67,18 @@
 						<li><i class="photos"></i>Photos</li>
 						<li><i class="map"></i>Map</li>
 					</ul>
+					<div class="left_description">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, cumque, ipsa, reprehenderit deserunt dolorem neque laboriosam harum temporibus id consequatur similique ratione at obcaecati ad qui minus animi rerum explicabo eum optio dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!
+					</div>
+					<div class="right_description">
+						<div class="img_holder">
+							<img src="images/img_apartment.jpg" alt="" />
+							<div class="count_photos">4 photos</div>
+						</div>
+						<div class="slide_video">
+							
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="sidebar">
