add slider (single page)

--- a/www/single.html
+++ b/www/single.html
@@ -76,9 +76,46 @@
 							<div class="count_photos">4 photos</div>
 						</div>
 						<div class="slide_video">
-							
+								
 						</div>
 					</div>
+				</div>
+				<h3 class="subtitle">Similar ads</h3>
+				<div class="slider slider_three">
+					<ul>
+						<li>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<div class="img_apartment">
+									<img src="images/img_apartment.jpg" alt="">
+								</div>
+								<h2>Name of apartment</h2>
+								<p class="address_city">City</p>
+								<p class="price">&#8364; 230 000 </p>
+							</a>
+						</li>
+					</ul>
+					<a href="#" class="prev_button"></a>
+					<a href="#" class="next_button"></a>
 				</div>
 			</div>
 			<div class="sidebar">
