--- a/www/single.html
+++ b/www/single.html
@@ -68,12 +68,12 @@
 						<li><i class="map"></i>Map</li>
 					</ul>
 					<div class="left_description">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, cumque, ipsa, reprehenderit deserunt dolorem neque laboriosam harum temporibus id consequatur similique ratione at obcaecati ad qui minus animi rerum explicabo eum optio dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, cumque, ipsa, reprehenderit deserunt dolorem neque laboriosam harum temporibus id consequatur similique ratione at obcaecati ad qui minus animi rerum explicabo eum optio dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!</p>
 					</div>
 					<div class="right_description">
+						<p class="price">&euro; 230 000</p>
 						<div class="img_holder">
-							<img src="images/img_apartment.jpg" alt="" />
-							<div class="count_photos">4 photos</div>
+							<img src="images/single-page-holder.jpg" alt="" />
 						</div>
 						<div class="slide_video">
 							
