--- a/www/single.html
+++ b/www/single.html
@@ -74,10 +74,11 @@
 						<p class="price">&euro; 230 000</p>
 						<div class="img_holder">
 							<img src="images/single-page-holder.jpg" alt="" />
+							<div class="slide_video">
+								<p><a href="" class="prev"></a> 3/4 <a href="" class="next"></a></p>
+							</div>
 						</div>
-						<div class="slide_video">
-								
-						</div>
+						
 					</div>
 				</div>
 				<h3 class="subtitle">Similar ads</h3>
