--- a/www/single.html
+++ b/www/single.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="price_button">
 						<p class="price">&euro; 230 000</p>
-						<p class="view_phone">view phone number</p>
+						<p class="view_phone"><a href="#">view phone number</a></p>
 						<a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a>
 					</div>
 				</div>
@@ -69,17 +69,55 @@
 					</ul>
 					<div class="left_description">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, cumque, ipsa, reprehenderit deserunt dolorem neque laboriosam harum temporibus id consequatur similique ratione at obcaecati ad qui minus animi rerum explicabo eum optio dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!dolor veniam fugiat non praesentium eaque laudantium odio eos voluptatibus est iste. Dignissimos, consectetur temporibus illum repellat perspiciatis!</p>
+						<div class="characteristics">
+							<h4>Characteristics:</h4>
+							<div class="col1">
+								<p>Number of rooms <span>1</span></p>
+								<p>Status <span>Free</span></p>
+								<p>Elevator <span>Yes</span></p>
+								<p>Balcony <span>No</span></p>
+							</div>
+							<div class="col2">
+								<p>Elevator <span>Yes</span></p>
+								<p>Balcony <span>No</span></p>
+							</div>	
+						</div>
 					</div>
 					<div class="right_description">
 						<p class="price">&euro; 230 000</p>
 						<div class="img_holder">
 							<img src="images/single-page-holder.jpg" alt="" />
-							<div class="slide_video">
+							<div class="count_photo">
 								<p><a href="" class="prev"></a> 3/4 <a href="" class="next"></a></p>
 							</div>
 						</div>
-						
+						<div class="video_slide">
+							<ul>
+								<li><img src="images/video1.jpg" alt=""></li>
+								<li><img src="images/video2.jpg" alt=""></li>
+							</ul>
+							<a href="#" class="prev"></a>
+							<a href="#" class="next"></a>
+						</div>
+						<p><a href="#" class="contact_button search_button"><span>Contact the agency</span><i></i></a></p>
 					</div>
+					<div class="col-full diagnosis">
+						<h4>Diagnosis of energy perfomance:</h4>
+						<div class="col1">
+							<p>Lorem Ipsum</p>
+							<p><img src="images/diagram1.jpg" alt=""></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laudantium.</p>
+						</div>
+						<div class="col2">
+							<p>Lorem Ipsum</p>
+							<p><img src="images/diagram2.jpg" alt=""></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laudantium.</p>
+						</div>
+					</div>
+					<ul class="share_button">
+						<li><img src="images/share_tw.png" alt=""></li>
+						<li><img src="images/share_fb.png" alt=""></li>
+					</ul>
 				</div>
 				<h3 class="subtitle">Similar ads</h3>
 				<div class="slider slider_three">
@@ -91,7 +129,7 @@
 								</div>
 								<h2>Name of apartment</h2>
 								<p class="address_city">City</p>
-								<p class="price">&#8364; 230 000 </p>
+								<p class="price">&euro; 230 000 </p>
 							</a>
 						</li>
 						<li>
