--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>jeLovejeVends.com</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
@@ -105,7 +106,7 @@
 							<label class="buy_radio"><input type="radio" name="buy_rent" value="buy" checked><i></i>Buy</label>
 							<label class="rent_radio"><input type="radio" name="buy_rent" value="rent"><i></i>Rent</label>
 							<h5 class="title_location_form">Location:</h5>
-							<select name="city" id="">
+							<select name="city" id="city">
 								<option value="city_name">City name</option>
 							</select>
 							<h5 class="title_budget">Budget</h5>
