--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,7 @@
 	<title>jeLovejeVends.com</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/jquery.ui.selectmenu.js"></script>
+	<script type="text/javascript" src="js/jquery.cycle2.min.js"></script>
 </head>
 <body class="home_page">
 	<div class="wrapper">
@@ -37,59 +36,118 @@
 			</div>
 		</header>
 		<div class="main">
+			<script>
+				jQuery(document).ready(function($){
+					$('.slider').cycle({
+						slides: '>div',
+						next: '.next_button',
+						prev: '.prev_button',
+						fx: 'carousel',
+						slideCount: 5
+					});
+				});
+			</script>
 			<div class="slider">
-				<ul>
-					<li>
-						<a href="#">
-							<div class="img_apartment">
-								<img src="images/img_apartment.jpg" alt="">
-							</div>
-							<h2>Name of apartment</h2>
-							<p class="address_city">City</p>
-							<p class="price">&#8364; 230 000 </p>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="img_apartment">
-								<img src="images/img_apartment.jpg" alt="">
-							</div>
-							<h2>Name of apartment</h2>
-							<p class="address_city">City</p>
-							<p class="price">&#8364; 230 000 </p>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="img_apartment">
-								<img src="images/img_apartment.jpg" alt="">
-							</div>
-							<h2>Name of apartment</h2>
-							<p class="address_city">City</p>
-							<p class="price">&#8364; 230 000 </p>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="img_apartment">
-								<img src="images/img_apartment.jpg" alt="">
-							</div>
-							<h2>Name of apartment</h2>
-							<p class="address_city">City</p>
-							<p class="price">&#8364; 230 000 </p>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<div class="img_apartment">
-								<img src="images/img_apartment.jpg" alt="">
-							</div>
-							<h2>Name of apartment</h2>
-							<p class="address_city">City</p>
-							<p class="price">&#8364; 230 000 </p>
-						</a>
-					</li>
-				</ul>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
+				<div>
+					<a href="#">
+						<div class="img_apartment">
+							<img src="images/img_apartment.jpg" alt="">
+						</div>
+						<h2>Name of apartment</h2>
+						<p class="address_city">City</p>
+						<p class="price">&#8364; 230 000 </p>
+					</a>
+				</div>
 				<a href="#" class="prev_button"></a>
 				<a href="#" class="next_button"></a>
 			</div>
